--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint --format codeframe .",
-    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe .",
+    "lintfix": "./node_modules/.bin/eslint --fix --format codeframe .",
     "test": "./node_modules/.bin/mocha tests.js"
   },
   "repository": {
@@ -21,6 +21,6 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
-    "mocha": "^7.1.2"
+    "mocha": "^7.2.0"
   }
 }
